# kiwi-pycon-xi

./: README.md  slides.pptx  slides_extended.pptx
code/: .gitignore
code/asgi-middleware/asgi/: README.md  app.py  pyproject.toml  run_server.sh
code/asgi-middleware/fastapi_hello/: NOTES.md  app.py  expensive_cache.py  pyproject.toml  req_timing.py  run_server.sh
code/asgi-middleware/fastapi_wsgi/: app.py  pyproject.toml
code/grpc-middleware/bidi-streaming/tls_certs/user_sessions/: gen-test-certs.sh
code/wsgi-middleware/django_polls/: pyproject.toml
code/wsgi-middleware/django_polls/mysite/mysite/: settings.py
code/wsgi-middleware/django_polls/mysite/polls/: latency_reporter.py  my_exc_handler.py  views.py
code/wsgi-middleware/django_polls_wsgi_wrap/: pyproject.toml
code/wsgi-middleware/django_polls_wsgi_wrap/mysite/mysite/: settings.py  urls.py  wsgi.py
code/wsgi-middleware/django_wsgi_flask/: pyproject.toml
code/wsgi-middleware/django_wsgi_flask/mysite/mysite/: settings.py  wsgi.py
code/wsgi-middleware/django_wsgi_flask/mysite/polls/: latency_reporter.py  my_exc_handler.py
code/wsgi-middleware/django_wsgi_flask/mysite/v2_flask_app/: __init__.py  flask_app.py
code/wsgi-middleware/flask_opentelemetry/: app.py  latency_reporter.py  otel_wsgi_snippet.py  pyproject.toml
code/wsgi-middleware/flask_tutorial/: pyproject.toml  run_app.sh
code/wsgi-middleware/flask_tutorial/flaskr/: blog.py
code/wsgi-middleware/wsgi/: app.py  pyproject.toml
