[tool.poetry]
name = "flask_opentelemetry"
version = "0.1.0"
description = ""
authors = ["Amit Saha <mail@echorand.me>"]

[tool.poetry.dependencies]
python = "^3.10"
opentelemetry-instrumentation-wsgi = "^0.30b1"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
